--- a/src/views/header.ejs
+++ b/src/views/header.ejs
@@ -1,9 +1,15 @@
-<nav>
-  <div id="logo"><img src="" alt="" />asd</div>
-  <ul>
-    <li><a href="#">Menu</a></li>
-    <li><a href="#">Profil</a></li>
-    <li><a href="#">Hubungi Kami</a></li>
-    <li><a href="#">Cart</a></li>
-  </ul>
-</nav>
+<div class="container">
+  <nav>
+    <div id="logo">
+      <a href="/"><img src="/images/logo-light.svg" alt="katring logo" /></a>
+    </div>
+    <ul>
+      <li><a href="/menu">Menu</a></li>
+      <li><a href="/profil">Profil</a></li>
+      <li><a href="/hubungi-kami">Hubungi Kami</a></li>
+      <li>
+        <a href="keranjang"><img src="/images/cart-light.svg" alt="" /></a>
+      </li>
+    </ul>
+  </nav>
+</div>
