--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -1,20 +1,119 @@
-<!-- Body -->
-<%- contentFor('body') %>
 <section class="home-hero">
-  <img src="" alt="" />
-  <div class="hero-content">
-    <span>Selera Nusantara</span>
-    <h1>Katering Penghilang Rindu Kampung Halaman</h1>
-    <p>
-      <span>KATRING</span> adalah perusahaan katering yang khusus menyediakan
-      masakan dari seluruh Nusantara. Tujuan kami adalah untuk mengobati rasa
-      kangen teman-teman yang sedang bekerja di perantauan.
-    </p>
-    <p>
-      Saat ini ada 12 macam masakan dari 3 provinsi yang ada di Indonesia.
-      Kedepannya akan ada menu-menu baru untuk menjadi varian di dalam menu
-      kami.
-    </p>
-    <a href="#">Lihat Menu</a>
+  <div class="container">
+    <img src="/images/home-hero-img-min.png" alt="" />
+    <div class="hero-content">
+      <span class="subtitle">Selera Nusantara</span>
+      <h1>Katering Penghilang Rindu Kampung Halaman</h1>
+      <p>
+        <strong>KATRING</strong> adalah perusahaan katering yang khusus
+        menyediakan masakan dari seluruh Nusantara. Tujuan kami adalah untuk
+        mengobati rasa kangen teman-teman yang sedang bekerja di perantauan.
+        <br /><br />
+        Saat ini ada 12 macam masakan dari 3 provinsi yang ada di Indonesia.
+        Kedepannya akan ada menu-menu baru untuk menjadi varian di dalam menu
+        kami.
+      </p>
+      <a href="/menu" class="btn">Lihat Menu</a>
+    </div>
+  </div>
+</section>
+
+<section class="home-populer">
+  <h3>POPULER PEKAN INI</h3>
+  <div class="card-container">
+    <div class="card">
+      <img src="/images/sate-img-min.jpg" alt="" />
+      <div class="card-content">
+        <p class="title">Sate Madura</p>
+        <p class="body">
+          Rasa bumbu sate Madura biasanya memang agak manis. Apalagi rasa manis
+          dari kecap ini berpadu dengan gurihnya kacang yang dihaluskan
+        </p>
+        <span class="fa fa-star checked"></span>
+        <span class="fa fa-star checked"></span>
+        <span class="fa fa-star checked"></span>
+        <span class="fa fa-star checked"></span>
+        <span class="fa fa-star"></span>
+      </div>
+    </div>
+
+    <div class="card">
+      <img src="/images/rendang-img-min.jpg" alt="" />
+      <div class="card-content">
+        <p class="title">Rendang</p>
+        <p class="body">
+          Rendang adalah makanan tradisional Sumatera Barat, tepatnya
+          Minangkabau, yang terbuat dari daging sapi diselimuti racikan bumbu
+          pedas.
+        </p>
+        <span class="fa fa-star checked"></span>
+        <span class="fa fa-star checked"></span>
+        <span class="fa fa-star checked"></span>
+        <span class="fa fa-star checked"></span>
+        <span class="fa fa-star"></span>
+      </div>
+    </div>
+
+    <div class="card">
+      <img src="/images/nasi-tutung-img-min.jpg" alt="" />
+      <div class="card-content">
+        <p class="title">Nasi Tutung Oncom</p>
+        <p class="body">
+          Nasi yang ditumbuk dan dicampur oncom, ditambah dengan lauk pauk yang
+          sesuai dengan selera.
+        </p>
+        <span class="fa fa-star checked"></span>
+        <span class="fa fa-star checked"></span>
+        <span class="fa fa-star checked"></span>
+        <span class="fa fa-star checked"></span>
+        <span class="fa fa-star checked"></span>
+      </div>
+    </div>
+  </div>
+  <a href="/menu" class="btn">Menu Lengkap</a>
+</section>
+
+<section class="pitching">
+  <div class="container">
+    <h2>
+      Kami melayani <span>lebih dari 120 acara</span> makan-makan yang
+      membutuhkan cita rasa kampung halaman
+    </h2>
+    <div class="values-container">
+      <div class="value">
+        <img src="/images/value-chef.svg" alt="" />
+        <p class="title">Chef Lokal</p>
+        <p class="subtitle">
+          Chef kami berasal dari daerah asal yang mengetahui cita rasa asli dari
+          menu masakan yang ada
+        </p>
+      </div>
+
+      <div class="value">
+        <img src="/images/value-resep.svg" alt="" />
+        <p class="title">Resep Asli</p>
+        <p class="subtitle">
+          Resep yang kami kembangkan adalah resep asli cita rasa asal masakan
+        </p>
+      </div>
+
+      <div class="value">
+        <img src="/images/value-acara.svg" alt="" />
+        <p class="title">Acara Besar</p>
+        <p class="subtitle">
+          Hadir untuk memenuhi kebutuhan acara Anda bersama teman-teman dari
+          berbagai daerah
+        </p>
+      </div>
+
+      <div class="value">
+        <img src="/images/value-nostalgia.svg" alt="" />
+        <p class="title">Nostalgia</p>
+        <p class="subtitle">
+          Cocok untuk menghilangkan kerinduan karena sudah lama tidak pulang ke
+          kampung halaman
+        </p>
+      </div>
+    </div>
   </div>
 </section>
