--- a/src/public/stylesheet/_home.scss
+++ b/src/public/stylesheet/_home.scss
@@ -1,6 +1,117 @@
-nav {
-  background: red;
+@import "./variables";
+.home-hero {
+  background: $color-primary;
+  .container {
+    min-height: 90vh;
+    @include widthOptimized();
+    display: flex;
+    justify-self: center;
+    align-items: center;
+    flex-wrap: wrap;
+    img {
+      flex: 1 1 30rem;
+      padding: 15rem 3rem;
+      background: url("/images/bg-radial-hero.png");
+      background-size: cover;
+      background-position: center;
+    }
+    .hero-content {
+      flex: 1 1 30rem;
+      margin-left: 4rem;
+      .subtitle {
+        color: white;
+        font-size: 1.4rem;
+        font-weight: 700;
+        text-transform: uppercase;
+      }
+      h1 {
+        color: white;
+        font-size: 4.8rem;
+        margin: 1rem 0 3rem 0;
+        font-family: $font-secondary;
+        font-weight: 900;
+      }
+      p {
+        color: white;
+        font-size: 2rem;
+        font-weight: 400;
+        margin-bottom: 5rem;
+      }
+      .btn {
+        background: $color-special;
+        margin-top: 10rem;
+      }
+    }
+  }
 }
-section.home-hero {
-  background: #201416;
+
+.home-populer {
+  background: $color-primary;
+  padding: 5rem 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  h3 {
+    color: white;
+    font-family: $font-secondary;
+    font-size: 3rem;
+    text-align: center;
+    padding-bottom: 1rem;
+    border-style: none none solid none;
+    border-color: #dd2b37;
+    width: 25%;
+    margin: 0 auto 2rem auto;
+  }
+  .card-container {
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    flex-wrap: wrap;
+    margin-bottom: 3rem;
+    .card {
+      // flex: 1 1 30px;
+      border-radius: 5px;
+      margin: 1rem 2rem;
+      width: 350px;
+      height: 410px;
+      background: #f3ebde;
+      img {
+        border-radius: 5px;
+      }
+      .card-content {
+        padding: 2rem;
+        .title {
+          font-family: $font-secondary;
+          color: $color-special;
+          font-size: 2.4rem;
+          font-weight: 700;
+        }
+        .body {
+          color: $color-primary;
+          font-size: 1.4rem;
+          font-weight: 400;
+          margin: 1rem 0;
+        }
+        .checked {
+          color: gold;
+        }
+        .fa-star {
+          font-size: 2rem;
+        }
+      }
+    }
+  }
+  .btn {
+    border: solid 3px #f3ebde;
+    margin: 0 auto;
+  }
+}
+
+.pitching {
+  background: $color-special;
+  padding: 5rem 0;
+  .container {
+    @include widthOptimized();
+    background: $color-special;
+  }
 }
