--- a/src/public/stylesheet/style.css
+++ b/src/public/stylesheet/style.css
@@ -1,5 +1,6 @@
 nav {
-  background: green;
+  width: 90%;
+  margin: 0 auto;
   min-height: 10vh;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -10,6 +11,11 @@ nav {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  padding-top: 3rem;
+}
+
+nav #logo img {
+  width: 60%;
 }
 
 nav ul {
@@ -22,7 +28,170 @@ nav ul {
 }
 
 nav ul li {
-  margin-left: 1rem;
+  margin-left: 3rem;
+}
+
+.container {
+  background: #201416;
+}
+
+.home-hero {
+  background: #201416;
+}
+
+.home-hero .container {
+  min-height: 90vh;
+  width: 90%;
+  margin: 0 auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  justify-self: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+.home-hero .container img {
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 30rem;
+          flex: 1 1 30rem;
+  padding: 15rem 3rem;
+  background: url("/images/bg-radial-hero.png");
+  background-size: cover;
+  background-position: center;
+}
+
+.home-hero .container .hero-content {
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 30rem;
+          flex: 1 1 30rem;
+  margin-left: 4rem;
+}
+
+.home-hero .container .hero-content .subtitle {
+  color: white;
+  font-size: 1.4rem;
+  font-weight: 700;
+  text-transform: uppercase;
+}
+
+.home-hero .container .hero-content h1 {
+  color: white;
+  font-size: 4.8rem;
+  margin: 1rem 0 3rem 0;
+  font-family: "Mulish", sans-serif;
+  font-weight: 900;
+}
+
+.home-hero .container .hero-content p {
+  color: white;
+  font-size: 2rem;
+  font-weight: 400;
+  margin-bottom: 5rem;
+}
+
+.home-hero .container .hero-content .btn {
+  background: #dd2b37;
+  margin-top: 10rem;
+}
+
+.home-populer {
+  background: #201416;
+  padding: 5rem 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.home-populer h3 {
+  color: white;
+  font-family: "Mulish", sans-serif;
+  font-size: 3rem;
+  text-align: center;
+  padding-bottom: 1rem;
+  border-style: none none solid none;
+  border-color: #dd2b37;
+  width: 25%;
+  margin: 0 auto 2rem auto;
+}
+
+.home-populer .card-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  margin-bottom: 3rem;
+}
+
+.home-populer .card-container .card {
+  border-radius: 5px;
+  margin: 1rem 2rem;
+  width: 350px;
+  height: 410px;
+  background: #f3ebde;
+}
+
+.home-populer .card-container .card img {
+  border-radius: 5px;
+}
+
+.home-populer .card-container .card .card-content {
+  padding: 2rem;
+}
+
+.home-populer .card-container .card .card-content .title {
+  font-family: "Mulish", sans-serif;
+  color: #dd2b37;
+  font-size: 2.4rem;
+  font-weight: 700;
+}
+
+.home-populer .card-container .card .card-content .body {
+  color: #201416;
+  font-size: 1.4rem;
+  font-weight: 400;
+  margin: 1rem 0;
+}
+
+.home-populer .card-container .card .card-content .checked {
+  color: gold;
+}
+
+.home-populer .card-container .card .card-content .fa-star {
+  font-size: 2rem;
+}
+
+.home-populer .btn {
+  border: solid 3px #f3ebde;
+  margin: 0 auto;
+}
+
+.pitching {
+  background: #dd2b37;
+  padding: 5rem 0;
+}
+
+.pitching .container {
+  width: 90%;
+  margin: 0 auto;
+  background: #dd2b37;
 }
 
 * {
@@ -32,15 +201,29 @@ nav ul li {
           box-sizing: border-box;
 }
 
+body {
+  font-family: "Mulish", sans-serif;
+}
+
 html {
   font-size: 62.5%;
 }
 
 a {
   text-decoration: none;
+  color: white;
+  font-size: 1.8rem;
+  text-transform: uppercase;
+  cursor: pointer;
 }
 
 li {
   list-style: none;
+}
+
+.btn {
+  border-radius: 50px;
+  border: none;
+  padding: 1rem 3rem;
 }
 /*# sourceMappingURL=style.css.map */
