--- a/src/public/stylesheet/style.scss
+++ b/src/public/stylesheet/style.scss
@@ -1,17 +1,30 @@
 @import "./header";
 @import "./footer";
-
+@import "./variables";
+@import "./home";
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+}
+body {
+  font-family: $font-secondary;
 }
 html {
   font-size: 62.5%;
 }
 a {
   text-decoration: none;
+  color: white;
+  font-size: 1.8rem;
+  text-transform: uppercase;
+  cursor: pointer;
 }
 li {
   list-style: none;
+}
+.btn {
+  border-radius: 50px;
+  border: none;
+  padding: 1rem 3rem;
 }
