--- a/src/views/partials/header-primary.ejs
+++ b/src/views/partials/header-primary.ejs
@@ -1,3 +1,10 @@
+<head>
+  <style>
+    nav {
+      background: #201416;
+    }
+  </style>
+</head>
 <nav>
   <div class="container">
     <div id="logo">
