--- a/src/public/stylesheet/style.scss
+++ b/src/public/stylesheet/style.scss
@@ -1,7 +1,11 @@
+@import "./variables";
 @import "./header";
 @import "./footer";
-@import "./variables";
 @import "./home";
+@import "./menu";
+@import "./profil";
+@import "./hubungi-kami";
+@import "./keranjang";
 * {
   margin: 0;
   padding: 0;
