--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -1,3 +1,4 @@
+<%- include("partials/header-primary.ejs") %>
 <section class="home-hero">
   <div class="container">
     <img src="/images/home-hero-img-min.png" alt="" />
@@ -73,7 +74,7 @@
   <a href="/menu" class="btn">Menu Lengkap</a>
 </section>
 
-<section class="pitching">
+<section class="home-pitching">
   <div class="container">
     <h2>
       Kami melayani <span>lebih dari 120 acara</span> makan-makan yang
@@ -117,3 +118,23 @@
     </div>
   </div>
 </section>
+<section class="home-kategori">
+  <h3>MENU DARI 4 PROVINSI</h3>
+  <div class="kategori-container">
+    <a href="#" class="kategori jatim"><p>Jawa Timur</p></a>
+    <a href="#" class="kategori sumbar">
+      <p>
+        Sumatera <br />
+        Barat
+      </p>
+    </a>
+    <a href="#" class="kategori aceh"><p>Aceh</p></a>
+    <a href="#" class="kategori kaltaru">
+      <p>
+        Kalimantan <br />
+        Utara
+      </p>
+    </a>
+  </div>
+</section>
+<%- include("partials/footer-primary.ejs") %>
