--- a/src/views/partials/footer-secondary.ejs
+++ b/src/views/partials/footer-secondary.ejs
@@ -1,3 +1,14 @@
+<head>
+  <style>
+    footer {
+      background: #201416;
+      color: #f3ebde;
+    }
+    footer .footer-nav a {
+      color: #f3ebde;
+    }
+  </style>
+</head>
 <footer>
   <div class="footer-nav">
     <li><a href="/hubungi-kami">Hubungi Kami</a></li>
