finished frontend design

--- a/src/public/stylesheet/_header.scss
+++ b/src/public/stylesheet/_header.scss
@@ -1,7 +1,7 @@
 @import "./variables";
 nav {
   min-height: 10vh;
-  padding-top: 3rem;
+  padding: 3rem 0;
   #logo {
     img {
       width: 60%;
