--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -116,7 +116,7 @@
         </p>
       </div>
     </div>
-  </div>
+  <!-- </div> -->
 </section>
 <section class="home-kategori">
   <h3>MENU DARI 4 PROVINSI</h3>
