--- a/src/views/menu.ejs
+++ b/src/views/menu.ejs
@@ -4,7 +4,7 @@
   <form action="/menu" method="post">
     <label for="kategori"
       >Kategori:
-      <select name="kategori" id="kategori">
+      <select class="select-css" name="kategori" id="kategori">
         <option value="all-kategori">All products</option>
         <option value="jatim">Jawa Timur</option>
         <option value="sumbar">Sumatera Barat</option>
@@ -14,18 +14,106 @@
     </label>
     <label for="sort"
       >Sort by:
-      <select name="sort" id="sort">
+      <select class="select-css" name="sort" id="sort">
         <option value="low-high">Price, low to high</option>
         <option value="high-low">Price, high to low</option>
       </select>
     </label>
+    <p class="product-count">12 Products</p>
   </form>
-  <div class="product-count">12 Products</div>
 </div>
 
-<div class="menu-products">
-  <section class="menu-hero">
-    <div class="menu-container"></div>
+<section class="menu-hero">
+  <div class="menu-container">
+    <div class="menu-card">
+      <img src="/images/sate-img-min.jpg" alt="" />
+      <div class="menu-content">
+        <a class="menu-title" href="#">Sate Madura</a>
+        <p class="start-from">Mulai Dari</p>
+        <p class="price">Rp 25.000</p>
+        <a href="#" class="btn">Add to Cart</a>
+      </div>
+    </div>
+
+    <div class="menu-card">
+      <img src="/images/sate-img-min.jpg" alt="" />
+      <div class="menu-content">
+        <a class="menu-title" href="#">Sate Madura</a>
+        <p class="start-from">Mulai Dari</p>
+        <p class="price">Rp 25.000</p>
+        <a href="#" class="btn">Add to Cart</a>
+      </div>
+    </div>
+
+    <div class="menu-card">
+      <img src="/images/sate-img-min.jpg" alt="" />
+      <div class="menu-content">
+        <a class="menu-title" href="#">Sate Madura</a>
+        <p class="start-from">Mulai Dari</p>
+        <p class="price">Rp 25.000</p>
+        <a href="#" class="btn">Add to Cart</a>
+      </div>
+    </div>
+
+    <div class="menu-card">
+      <img src="/images/sate-img-min.jpg" alt="" />
+      <div class="menu-content">
+        <a class="menu-title" href="#">Sate Madura</a>
+        <p class="start-from">Mulai Dari</p>
+        <p class="price">Rp 25.000</p>
+        <a href="#" class="btn">Add to Cart</a>
+      </div>
+    </div>
+
+    <div class="menu-card">
+      <img src="/images/sate-img-min.jpg" alt="" />
+      <div class="menu-content">
+        <a class="menu-title" href="#">Sate Madura</a>
+        <p class="start-from">Mulai Dari</p>
+        <p class="price">Rp 25.000</p>
+        <a href="#" class="btn">Add to Cart</a>
+      </div>
+    </div>
+
+    <div class="menu-card">
+      <img src="/images/sate-img-min.jpg" alt="" />
+      <div class="menu-content">
+        <a class="menu-title" href="#">Sate Madura</a>
+        <p class="start-from">Mulai Dari</p>
+        <p class="price">Rp 25.000</p>
+        <a href="#" class="btn">Add to Cart</a>
+      </div>
+    </div>
+
+    <div class="menu-card">
+      <img src="/images/sate-img-min.jpg" alt="" />
+      <div class="menu-content">
+        <a class="menu-title" href="#">Sate Madura</a>
+        <p class="start-from">Mulai Dari</p>
+        <p class="price">Rp 25.000</p>
+        <a href="#" class="btn">Add to Cart</a>
+      </div>
+    </div>
+
+    <div class="menu-card">
+      <img src="/images/sate-img-min.jpg" alt="" />
+      <div class="menu-content">
+        <a class="menu-title" href="#">Sate Madura</a>
+        <p class="start-from">Mulai Dari</p>
+        <p class="price">Rp 25.000</p>
+        <a href="#" class="btn">Add to Cart</a>
+      </div>
+    </div>
+
+    <div class="menu-card">
+      <img src="/images/sate-img-min.jpg" alt="" />
+      <div class="menu-content">
+        <a class="menu-title" href="#">Sate Madura</a>
+        <p class="start-from">Mulai Dari</p>
+        <p class="price">Rp 25.000</p>
+        <a href="#" class="btn">Add to Cart</a>
+      </div>
+    </div>
   </div>
 </section>
 <%- include("partials/footer-secondary.ejs") %>
