--- a/src/public/stylesheet/_menu.scss
+++ b/src/public/stylesheet/_menu.scss
@@ -1,9 +1,94 @@
 @import "./variables";
 
 .menu-filters {
+  background: #f3ebde;
   h1 {
     font-size: 4rem;
     font-weight: 800;
     color: $color-special;
+    text-align: center;
+  }
+  form {
+    margin-top: 2rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    border-style: solid none;
+    border-width: 1px;
+    border-color: rgba(0, 0, 0, 0.5);
+    padding: 1.5rem 0;
+    label {
+      margin: 0 2rem;
+      font-family: $font-primary;
+      font-size: 1rem;
+      text-transform: uppercase;
+    }
+    .select-css {
+      background-color: #f3ebde;
+      appearance: none;
+      background-image: url("/images/chevron-down-solid.svg");
+      background-size: 10px 10px;
+      background-repeat: no-repeat;
+      background-position: right;
+      border: none;
+      font-family: $font-primary;
+      width: 120px;
+      padding: 0.6em 1.4em 0.5em 0.8em;
+      font-size: 1.6rem;
+    }
+    .product-count {
+      font-size: 1.6rem;
+      font-style: italic;
+      margin: 0 0;
+    }
+  }
+}
+
+.menu-hero {
+  background: #f3ebde;
+  .menu-container {
+    @include widthOptimized();
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    .menu-card {
+      background: white;
+      width: 350px;
+      margin: 3rem 0;
+      border-radius: 5px;
+      padding-bottom: 1rem;
+      img {
+        border-radius: 5px 5px 0 0;
+      }
+      .menu-content {
+        padding: 2rem;
+        .menu-title {
+          font-size: 2.4rem;
+          font-family: $font-secondary;
+          font-weight: 700;
+          text-transform: unset;
+          color: $color-primary;
+        }
+        .start-from {
+          font-size: 1.2rem;
+          font-weight: 500;
+          text-transform: uppercase;
+          margin-top: 2rem;
+        }
+        .price {
+          font-size: 2rem;
+          font-weight: 600;
+          color: $color-special;
+          margin-bottom: 3rem;
+        }
+        .btn {
+          background: $color-special;
+          border-radius: 3px;
+          width: 100%;
+          text-transform: none;
+        }
+      }
+    }
   }
 }
