--- a/src/public/stylesheet/style.scss
+++ b/src/public/stylesheet/style.scss
@@ -6,13 +6,14 @@
 @import "./profil";
 @import "./hubungi-kami";
 @import "./keranjang";
+@import "./detail-produk";
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
 body {
-  font-family: $font-secondary;
+  font-family: $font-primary;
 }
 html {
   font-size: 62.5%;
@@ -24,6 +25,10 @@ a {
   text-transform: uppercase;
   cursor: pointer;
 }
+a:hover {
+  color: $color-special;
+  text-decoration: none;
+}
 li {
   list-style: none;
 }
@@ -31,4 +36,6 @@ li {
   border-radius: 50px;
   border: none;
   padding: 1rem 3rem;
+  color: white;
+  font-size: 1.8rem;
 }
