--- a/src/views/partials/header-tertiary.ejs
+++ b/src/views/partials/header-tertiary.ejs
@@ -1,3 +1,41 @@
+<style>
+  nav {
+    background: linear-gradient(0deg, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
+      url("/images/bg-tentang-img-min.jpg");
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    min-height: 100vh;
+  }
+  nav a {
+    color: white;
+  }
+  header {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    min-height: 80vh;
+  }
+  header h1 {
+    margin-top: 2rem;
+    font-family: "Mulish", sans-serif;
+    font-size: 4.8rem;
+    font-weight: 900;
+  }
+  header p {
+    font-family: "Lato", sans-serif;
+    font-size: 2rem;
+    font-weight: 400;
+  }
+  header h1,
+  p {
+    color: white;
+  }
+  .video-placeholder {
+    margin-top: 2rem;
+  }
+</style>
 <nav>
   <div class="container">
     <div id="logo">
@@ -12,4 +50,18 @@
       </li>
     </ul>
   </div>
+  <header>
+    <h1>Tentang Kami</h1>
+    <p>Perusahaan katering cita rasa nusantara</p>
+    <div class="video-placeholder">
+      <iframe
+        width="800"
+        height="460"
+        src="https://www.youtube.com/embed/HzykMG4-MfA"
+        frameborder="0"
+        allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+        allowfullscreen
+      ></iframe>
+    </div>
+  </header>
 </nav>
