--- a/src/views/layout.ejs
+++ b/src/views/layout.ejs
@@ -17,6 +17,7 @@
       integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z"
       crossorigin="anonymous"
     />
+    
     <link rel="stylesheet" href="/stylesheet/style.css" />
 
     <title>Katring</title>
@@ -25,5 +26,7 @@
     <!-- Body -->
     <%-body%>
     <script src="/javascript/script.js"></script>
+    <script type="text/javascript" src="https://app.sandbox.midtrans.com/snap/snap.js" data-client-key="SET_YOUR_CLIENT_KEY_HERE"></script>
+  </head>
   </body>
 </html>
